litt av det basice

--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
             </nav>
         </header>
         <main>
+            <ul>
+                <li><a href="#">Jente</a></li>
+                <li><a href="#">Gutt</a></li>
+            </ul>
+            <ul>
+                <li><a href="#">Sommersko</a></li>
+                <li><a href="#">Vintersko</a></li>
+                <li><a href="#">Joggesko</a></li>
+                <li><a href="#">Gummistøvler</a></li>
+            </ul>
             <!--legg inn ting som article, section osv -->
         </main>
         <footer>
