--- a/indexnr2.html
+++ b/indexnr2.html
@@ -10,7 +10,7 @@
     <body>
         <header>
             <nav>
-                <span>
+                <span id="LOGO">
                     <a href="index.html">Lilleputtsko</a>
                 </span>
             </nav>
@@ -20,6 +20,9 @@
                 <a>Jente</a>
                 <a>Gutt</a>
             </section>
+                 <article>
+                    <img src="img/DreamShaper_v7_shoes_for_kids_2.jpg" alt="tilbud sko, moderne, fargerike barnesko">
+                 </article>
             <section>
                 <a>Gummistøvler</a>
                 <a>Vintersko</a>
