kode litt, css begynnelse

--- a/indexnr2.html
+++ b/indexnr2.html
@@ -13,6 +13,12 @@
                 <span id="LOGO">
                     <a href="index.html">Lilleputtsko</a>
                 </span>
+                <li><a href="#">Sommersko</a></li>
+                <li><a href="#">Vintersko</a></li>
+                <li><a href="#">Pensko</a></li>
+                <li><a href="#">Boots</a></li>
+                <li><a href="#">Regnstøvler</a></li>
+                <li><a href="#">Joggesko</a></li>
             </nav>
         </header>
         <main>
@@ -22,6 +28,7 @@
             </section>
                  <article>
                     <img src="img/DreamShaper_v7_shoes_for_kids_2.jpg" alt="tilbud sko, moderne, fargerike barnesko">
+                    <p>Nyheter</p>
                  </article>
             <section>
                 <a>Gummistøvler</a>
