--- a/indexnr2.html
+++ b/indexnr2.html
@@ -40,9 +40,10 @@
             <!--legg inn ting som article, section osv -->
         </main>
         <footer>
+            <!--legg inn den svarte boksen på bånn-->
             <section>
                 <nav>
-                <!--legg inn den svarte boksen på bånn-->
+                    <h3>LILLEPUTTSKO</h3>
                     <ul>
                         <li><a href="#">KUNDEKLUBB</a></li>
                         <li><a href="#">KUNDESERVICE</a></li>
