kommet i gang med kjøpsrett

--- a/kjøpsvilkår.html
+++ b/kjøpsvilkår.html
@@ -6,4 +6,107 @@
         <!--legg inn under-->
         <link rel="stylesheet" href="css/style.css" type="text/css">
         <title>Lilleputtsko</title>
+        <input type="text" value="søk">
     </head>
+    <body>
+        <header>
+            <nav>
+                <span id="LOGO">
+                    <a href="index.html">Lilleputtsko</a>
+                </span>
+            </nav>
+        </header>
+        <main>
+        <section>
+            <h2>Kjøpsvilkår</h2>
+            <article>
+                <h3>Kjøpsvilkår</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                    Ut risus neque, aliquet ut accumsan vel, facilisis eu ex. 
+                    Nunc erat turpis, molestie id tincidunt nec, placerat id ante. 
+                    Phasellus maximus purus nec eros varius, sed vestibulum quam feugiat.
+                    Proin pharetra maximus risus, sit amet pellentesque elit efficitur id. 
+                    Donec ornare lectus at orci pretium dignissim. 
+                </p>
+            </article>
+            <article>
+                <h3>Levering</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                    Ut risus neque, aliquet ut accumsan vel, facilisis eu ex. 
+                    Nunc erat turpis, molestie id tincidunt nec, placerat id ante. 
+                    Phasellus maximus purus nec eros varius, sed vestibulum quam feugiat.
+                    Proin pharetra maximus risus, sit amet pellentesque elit efficitur id. 
+                    Donec ornare lectus at orci pretium dignissim. 
+                </p>
+            </article>
+            <article>
+                <h3>Betaling</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                    Ut risus neque, aliquet ut accumsan vel, facilisis eu ex. 
+                    Nunc erat turpis, molestie id tincidunt nec, placerat id ante. 
+                    Phasellus maximus purus nec eros varius, sed vestibulum quam feugiat.
+                    Proin pharetra maximus risus, sit amet pellentesque elit efficitur id. 
+                    Donec ornare lectus at orci pretium dignissim. 
+                </p>
+            </article>
+            <article>
+                <h3>Retur og Bytte</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                    Ut risus neque, aliquet ut accumsan vel, facilisis eu ex. 
+                    Nunc erat turpis, molestie id tincidunt nec, placerat id ante. 
+                    Phasellus maximus purus nec eros varius, sed vestibulum quam feugiat.
+                    Proin pharetra maximus risus, sit amet pellentesque elit efficitur id. 
+                    Donec ornare lectus at orci pretium dignissim. 
+                </p>
+            </article>
+            <article>
+                <h3>Reklamasjon</h3>
+                <p>
+                    Lorem ipsum Duis consequat vitae purus eu consequat. Nunc leo lectus, 
+                    aliquet sed ligula gravida, gravida pellentesque felis. Cras hendrerit purus
+                    non consectetur viverra. Pellentesque vel ante non dui ullamcorper accumsan. 
+                    In ullamcorper rutrum ipsum id mollis. Pellentesque varius, neque eget pellentesque 
+                    auctor.
+                </p>
+            </article>
+        </section>
+        </main>
+        <footer>
+            <!--legg inn den svarte boksen på bånn-->
+            <section>
+                <nav>
+                    <h2>LILLEPUTTSKO</h2>
+                    <h3>Kundeservice</h3>
+                    <ul>
+                        <li><a href="#">KUNDEKLUBB</a></li>
+                        <li><a href="#">KUNDESERVICE</a></li>
+                        <li><a href="kjøpsvilkår.html">KJØPSVILKÅR</a></li>
+                        <li><a href="#">KONTAKT OSS</a></li>
+                    </ul>
+                    <h3>Våre produkter</h3>
+                    <ul>
+                        <li><a href="#">Sommersko</a></li>
+                        <li><a href="#">Vintersko</a></li>
+                        <li><a href="#">Pensko</a></li>
+                        <li><a href="#">Boots</a></li>
+                        <li><a href="#">Regnstøvler</a></li>
+                        <li><a href="#">Joggesko</a></li>
+                    </ul>
+                    
+                    <h4>Sjekk ut våre sosiale medier</h4>
+               <!--legg inn ikoner-->
+                    <ul id="social-icons">
+                        <li>facebook</li>
+                        <li>instagram</li>
+                        <li>snapchat</li>
+                    </ul>
+                </nav>
+            </section>
+        </footer>
+    </body>
+</html>
+    
