--- a/indexnr2.html
+++ b/indexnr2.html
@@ -6,6 +6,7 @@
         <!--legg inn under-->
         <link rel="stylesheet" href="css/style.css" type="text/css">
         <title>Lilleputtsko</title>
+        <input type="text" value="søk">
     </head>
     <body>
         <header>
@@ -13,12 +14,12 @@
                 <span id="LOGO">
                     <a href="index.html">Lilleputtsko</a>
                 </span>
-                <li><a href="#">Sommersko</a></li>
-                <li><a href="#">Vintersko</a></li>
-                <li><a href="#">Pensko</a></li>
-                <li><a href="#">Boots</a></li>
-                <li><a href="#">Regnstøvler</a></li>
-                <li><a href="#">Joggesko</a></li>
+                <li><a href="produkt.html">Sommersko</a></li>
+                <li><a href="produkt.html">Vintersko</a></li>
+                <li><a href="produkt.html">Pensko</a></li>
+                <li><a href="produkt.html">Boots</a></li>
+                <li><a href="produkt.html">Regnstøvler</a></li>
+                <li><a href="produkt.html">Joggesko</a></li>
             </nav>
         </header>
         <main>
@@ -27,8 +28,8 @@
                 <a>Gutt</a>
             </section>
                  <article>
-                    <img src="img/DreamShaper_v7_shoes_for_kids_2.jpg" alt="tilbud sko, moderne, fargerike barnesko">
-                    <p>Nyheter</p>
+                    <img src="img/tilbud bilde sko.jpg" alt="tilbud sko, moderne, fargerike barnesko">
+                    <p>Tilbud</p>
                  </article>
             <section>
                 <a>Gummistøvler</a>
@@ -36,6 +37,21 @@
                 <a>Sommersko</a>
                 <a>Joggesko</a>
             </section>
+            <section>
+                <article>
+                    <img src="img/nyheter bilde sko.jpg" alt="nyheter sko, disse nye skoene tilbyr vi i vår nettbutikk. moderne, faregerike barnesko">
+                    <p>Nyheter</p>
+                </article>
+            </section>
+            <article id="medlemsknapp">
+                <li><a href="#">Bli medlem her</a></li>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Ut risus neque, aliquet ut accumsan vel, facilisis eu ex.
+                    Nunc erat turpis, molestie id tincidunt nec, placerat id 
+                    ante. 
+                </p>
+            </article>
          
             <!--legg inn ting som article, section osv -->
         </main>
@@ -43,13 +59,25 @@
             <!--legg inn den svarte boksen på bånn-->
             <section>
                 <nav>
-                    <h3>LILLEPUTTSKO</h3>
+                    <h2>LILLEPUTTSKO</h2>
+                    <h3>Kundeservice</h3>
                     <ul>
                         <li><a href="#">KUNDEKLUBB</a></li>
                         <li><a href="#">KUNDESERVICE</a></li>
-                        <li><a href="produkt.html">KJØPSVILKÅR</a></li>
+                        <li><a href="kjøpsvilkår.html">KJØPSVILKÅR</a></li>
                         <li><a href="#">KONTAKT OSS</a></li>
                     </ul>
+                    <h3>Våre produkter</h3>
+                    <ul>
+                        <li><a href="#">Sommersko</a></li>
+                        <li><a href="#">Vintersko</a></li>
+                        <li><a href="#">Pensko</a></li>
+                        <li><a href="#">Boots</a></li>
+                        <li><a href="#">Regnstøvler</a></li>
+                        <li><a href="#">Joggesko</a></li>
+                    </ul>
+                    
+                    <h4>Sjekk ut våre sosiale medier</h4>
                <!--legg inn ikoner-->
                     <ul id="social-icons">
                         <li>facebook</li>
