--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
             <nav>
                 <span>
-                    <a href="index.html">LOGO</a>
+                    <a href="indexnr2.html">LOGO</a>
                 </span>
             </nav>
         </header>
