--- a/indexnr2.html
+++ b/indexnr2.html
@@ -12,7 +12,7 @@
         <header>
             <nav>
                 <span id="LOGO">
-                    <a href="index.html">Lilleputtsko</a>
+                    <a href="indexnr2.html">Lilleputtsko</a>
                 </span>
                 <li><a href="produkt.html">Sommersko</a></li>
                 <li><a href="produkt.html">Vintersko</a></li>
