--- a/kjøpsvilkår.html
+++ b/kjøpsvilkår.html
@@ -12,7 +12,7 @@
         <header>
             <nav>
                 <span id="LOGO">
-                    <a href="index.html">Lilleputtsko</a>
+                    <a href="indexnr2.html">Lilleputtsko</a>
                 </span>
             </nav>
         </header>
@@ -89,7 +89,7 @@
                     </ul>
                     <h3>Våre produkter</h3>
                     <ul>
-                        <li><a href="#">Sommersko</a></li>
+                        <li><a href="produkt.html">Sommersko</a></li>
                         <li><a href="#">Vintersko</a></li>
                         <li><a href="#">Pensko</a></li>
                         <li><a href="#">Boots</a></li>
