--- a/produkt.html
+++ b/produkt.html
@@ -12,7 +12,7 @@
         <header>
             <nav>
                 <span id="LOGO">
-                    <a href="index.html">Lilleputtsko</a>
+                    <a href="indexnr2.html">Lilleputtsko</a>
                 </span>
             </nav>
         </header>
