--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
             </nav>
         </header>
         <main>
+            <article id="medlemsknapp">
+                    <h2>Bli medlem her</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Ut risus neque, aliquet ut accumsan vel, facilisis eu ex.
+                            Nunc erat turpis, molestie id tincidunt nec, placerat id 
+                            ante. Mauris viverra vestibulum augue, in egestas eros 
+                            rhoncus nec. Cras eu purus interdum, vehicula dui ac, sodales 
+                            arcu. Donec efficitur vulputate dui eget imperdiet. Nullam
+                            finibus maximus ultricies
+                         </p>
+            </article>
             <ul>
                 <li><a href="#">Jente</a></li>
                 <li><a href="#">Gutt</a></li>
