--- a/indexnr2.html
+++ b/indexnr2.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="no">
     <head>
-        <meta name="viewport"content="width-device-width, initial-scale=1.0">
-        <meta charset="UTF=8">
+        <meta name="viewport" content="width-device-width, initial-scale=1.0">
+        <meta charset="UTF-8">
         <!--legg inn under-->
         <link rel="stylesheet" href="css/style.css" type="text/css">
         <title>Lilleputtsko</title>
@@ -14,12 +14,14 @@
                 <span id="LOGO">
                     <a href="indexnr2.html">Lilleputtsko</a>
                 </span>
-                <li><a href="produkt.html">Sommersko</a></li>
-                <li><a href="produkt.html">Vintersko</a></li>
-                <li><a href="produkt.html">Pensko</a></li>
-                <li><a href="produkt.html">Boots</a></li>
-                <li><a href="produkt.html">Regnstøvler</a></li>
-                <li><a href="produkt.html">Joggesko</a></li>
+                <ul>
+                    <li><a href="produkt.html">Sommersko</a></li>
+                    <li><a href="produkt.html">Vintersko</a></li>
+                    <li><a href="produkt.html">Pensko</a></li>
+                    <li><a href="produkt.html">Boots</a></li>
+                    <li><a href="produkt.html">Regnstøvler</a></li>
+                    <li><a href="produkt.html">Joggesko</a></li>
+                </ul>
             </nav>
         </header>
         <main>
@@ -27,9 +29,9 @@
                 <a>Jente</a>
                 <a>Gutt</a>
             </section>
-                 <article>
-                    <img src="img/tilbud bilde sko.jpg" alt="tilbud sko, moderne, fargerike barnesko">
-                    <p>Tilbud</p>
+            <h2>Tilbud</h2>
+                 <article class="img">
+                    <img src="img/tilbud-bilde-sko.jpg" alt="tilbud sko, moderne, fargerike barnesko">
                  </article>
             <section>
                 <a>Gummistøvler</a>
@@ -38,20 +40,23 @@
                 <a>Joggesko</a>
             </section>
             <section>
-                <article>
-                    <img src="img/nyheter bilde sko.jpg" alt="nyheter sko, disse nye skoene tilbyr vi i vår nettbutikk. moderne, faregerike barnesko">
+                <article class="img">
+                    <img src="img/nyheter-bilde-sko.jpg" alt="nyheter sko, disse nye skoene tilbyr vi i vår nettbutikk. moderne, faregerike barnesko">
                     <p>Nyheter</p>
                 </article>
             </section>
             <article id="medlemsknapp">
-                <li><a href="#">Bli medlem her</a></li>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Ut risus neque, aliquet ut accumsan vel, facilisis eu ex.
-                    Nunc erat turpis, molestie id tincidunt nec, placerat id 
-                    ante. 
-                </p>
-            </article>
+                <h2>Bli medlem her</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Ut risus neque, aliquet ut accumsan vel, facilisis eu ex.
+                        Nunc erat turpis, molestie id tincidunt nec, placerat id 
+                        ante. Mauris viverra vestibulum augue, in egestas eros 
+                        rhoncus nec. Cras eu purus interdum, vehicula dui ac, sodales 
+                        arcu. Donec efficitur vulputate dui eget imperdiet. Nullam
+                        finibus maximus ultricies
+                     </p>
+        </article>
          
             <!--legg inn ting som article, section osv -->
         </main>
