--- a/indexnr2.html
+++ b/indexnr2.html
@@ -3,17 +3,19 @@
     <head>
         <meta name="viewport" content="width-device-width, initial-scale=1.0">
         <meta charset="UTF-8">
-        <!--legg inn under-->
         <link rel="stylesheet" href="css/style.css" type="text/css">
         <title>Lilleputtsko</title>
-        <input type="text" value="søk">
+        <script src="https://kit.fontawesome.com/2d6eaf2aa7.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <header>
             <nav>
+                <i class="fa-solid fa-bars"></i>
                 <span id="LOGO">
                     <a href="indexnr2.html">Lilleputtsko</a>
                 </span>
+                <i class="fa-solid fa-magnifying-glass"></i>
+                <i class="fa-solid fa-cart-shopping"></i>
                 <ul>
                     <li><a href="produkt.html">Sommersko</a></li>
                     <li><a href="produkt.html">Vintersko</a></li>
@@ -26,18 +28,18 @@
         </header>
         <main>
             <section>
-                <a>Jente</a>
-                <a>Gutt</a>
+                <a href="produkt.html" class="knapp">Jente</a>
+                <a href="produkt.html" class="knapp">Gutt</a>
             </section>
             <h2>Tilbud</h2>
                  <article class="img">
                     <img src="img/tilbud-bilde-sko.jpg" alt="tilbud sko, moderne, fargerike barnesko">
                  </article>
             <section>
-                <a>Gummistøvler</a>
-                <a>Vintersko</a>
-                <a>Sommersko</a>
-                <a>Joggesko</a>
+                <a href="produkt.html" class="knapp">Gummistøvler</a>
+                <a href="produkt.html" class="knapp">Vintersko</a>
+                <a href="produkt.html" class="knapp">Sommersko</a>
+                <a href="produkt.html" class="knapp">Joggesko</a>
             </section>
             <section>
                 <article class="img">
@@ -56,7 +58,7 @@
                         arcu. Donec efficitur vulputate dui eget imperdiet. Nullam
                         finibus maximus ultricies
                      </p>
-        </article>
+            </article>
          
             <!--legg inn ting som article, section osv -->
         </main>
