--- a/produkt.html
+++ b/produkt.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="no">
     <head>
-        <meta name="viewport"content="width-device-width, initial-scale=1.0">
-        <meta charset="UTF=8">
+        <meta name="viewport" content="width-device-width, initial-scale=1.0">
+        <meta charset="UTF-8">
         <!--legg inn under-->
         <link rel="stylesheet" href="css/style.css" type="text/css">
         <title>Lilleputtsko</title>
-        <input type="text" value="søk">
     </head>
     <body>
         <header>
@@ -16,6 +15,37 @@
                 </span>
             </nav>
         </header>
+        <main>
+            <section>
+                <article class="produktimg">
+                    <img src="img/sko-begge.jpg" alt="inextenso softwear sko, lilla og svarte sko med borrelås og elastisk snøring">
+                </article>
+                <article id="produktimg">
+                    <img src="img/sko-begge.jpg">
+                    <img src="img/sko-foran.jpg">
+                    <img src="img/sko-siden.jpg">
+                    <img src="img/sko-bak.jpg">
+                </article>
+                <p class="størrelser">28</p>
+                <p class="størrelser">29</p>
+                <p class="størrelser">30</p>
+                <p class="størrelser">31</p>
+                <p class="størrelser">32</p>
+                <p class="størrelser">33</p>
+                <p class="størrelser">34</p>
+                <p class="størrelser">35</p>
+                <p class="størrelser">36</p>
+                <p class="størrelser">37</p>
+                <h6>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed neque 
+                    finibus, molestie lacus et, volutpat justo. Phasellus consequat volutpat aliquet. 
+                    Vivamus quis porta sem. Morbi vitae metus eros. Etiam lectus dui, ullamcorper eu 
+                    nunc at, fermentum sollicitudin lacus. Nam nec arcu sceler
+                </p>
+                </h6>
+            </section>
+        </main>
         <footer>
             <!--legg inn den svarte boksen på bånn-->
             <section>
