--- a/kjøpsvilkår.html
+++ b/kjøpsvilkår.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="no">
     <head>
-        <meta name="viewport"content="width-device-width, initial-scale=1.0">
-        <meta charset="UTF=8">
+        <meta name="viewport" content="width-device-width, initial-scale=1.0">
+        <meta charset="UTF-8">
         <!--legg inn under-->
         <link rel="stylesheet" href="css/style.css" type="text/css">
         <title>Lilleputtsko</title>
-        <input type="text" value="søk">
     </head>
     <body>
         <header>
