--- a/produkt.html
+++ b/produkt.html
@@ -26,6 +26,7 @@
                     <img src="img/sko-siden.jpg">
                     <img src="img/sko-bak.jpg">
                 </article>
+                <h5>Størrelser</h5>
                 <p class="størrelser">28</p>
                 <p class="størrelser">29</p>
                 <p class="størrelser">30</p>
@@ -36,14 +37,16 @@
                 <p class="størrelser">35</p>
                 <p class="størrelser">36</p>
                 <p class="størrelser">37</p>
-                <h6>
+
+                <a href="#" id="kjøpeknapp">Legg til i handlekurv</a>
+                <h6>Produktbeskrivelse</h6>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed neque 
                     finibus, molestie lacus et, volutpat justo. Phasellus consequat volutpat aliquet. 
                     Vivamus quis porta sem. Morbi vitae metus eros. Etiam lectus dui, ullamcorper eu 
                     nunc at, fermentum sollicitudin lacus. Nam nec arcu sceler
                 </p>
-                </h6>
+              
             </section>
         </main>
         <footer>
