--- a/indexnr2.html
+++ b/indexnr2.html
@@ -84,9 +84,9 @@
                         <li><a href="#">Joggesko</a></li>
                     </ul>
                     
-                    <h4>Sjekk ut våre sosiale medier</h4>
+                    <h4 id="sosialemedier">Sjekk ut våre sosiale medier</h4>
                <!--legg inn ikoner-->
-                    <ul id="social-icons">
+                    <ul>
                         <li>facebook</li>
                         <li>instagram</li>
                         <li>snapchat</li>
