--- a/produkt.html
+++ b/produkt.html
@@ -3,7 +3,6 @@
     <head>
         <meta name="viewport" content="width-device-width, initial-scale=1.0">
         <meta charset="UTF-8">
-        <!--legg inn under-->
         <link rel="stylesheet" href="css/style.css" type="text/css">
         <title>Lilleputtsko</title>
     </head>
@@ -16,6 +15,14 @@
             </nav>
         </header>
         <main>
+            <nav>
+                <ul>
+                    <li><a href="#">Hjem</a></li>
+                    <li><a href="#">Barn</a></li>
+                    <li><a href="#">Alle barnesko</a></li>
+                    <li><a href="#">Inextenso softwear</a></li>
+                </ul>
+            </nav>
             <section>
                 <article class="produktimg">
                     <img src="img/sko-begge.jpg" alt="inextenso softwear sko, lilla og svarte sko med borrelås og elastisk snøring">
