--- a/indexnr2.html
+++ b/indexnr2.html
@@ -11,16 +11,18 @@
         <script src="https://kit.fontawesome.com/2d6eaf2aa7.js" crossorigin="anonymous"></script>
     </head>
     <body>
+        <div id="grid-container"></div>
         <header>
             <nav>
-                
                 <i class="fa-solid fa-bars"></i>
                 <span id="LOGO">
                     <a href="indexnr2.html">Lilleputtsko</a>
                 </span>
-                <i class="fa-solid fa-magnifying-glass"></i>
-                <i class="fa-solid fa-cart-shopping"></i>
-                <ul>
+                <div>
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <i class="fa-solid fa-cart-shopping"></i>
+                </div>
+                <ul class="navbar">
                     <li><a href="produkt.html">Sommersko</a></li>
                     <li><a href="produkt.html">Vintersko</a></li>
                     <li><a href="produkt.html">Pensko</a></li>
@@ -68,7 +70,7 @@
         </main>
         <footer>
             <!--legg inn den svarte boksen på bånn-->
-            <section>
+            <section id="Kundeservice">
                 <nav>
                     <h2>LILLEPUTTSKO</h2>
                     <h3>Kundeservice</h3>
@@ -87,15 +89,13 @@
                         <li><a href="#">Regnstøvler</a></li>
                         <li><a href="#">Joggesko</a></li>
                     </ul>
-                    
-                    <h4 id="sosialemedier">Sjekk ut våre sosiale medier</h4>
-               <!--legg inn ikoner-->
-                    <ul>
-                        <li>facebook</li>
-                        <li>instagram</li>
-                        <li>snapchat</li>
-                    </ul>
                 </nav>
+                    <h4 id="sosialemedier">Sjekk ut våre sosiale medier</h4>
+                    <ul>
+                        <i class="fa-brands fa-square-facebook ikoner"></i>
+                        <i class="fa-brands fa-instagram ikoner"></i>
+                        <i class="fa-brands fa-snapchat ikoner"></i>
+                    </ul>
             </section>
         </footer>
     </body>
