--- a/kjøpsvilkår.html
+++ b/kjøpsvilkår.html
@@ -4,17 +4,31 @@
         <meta name="viewport" content="width-device-width, initial-scale=1.0">
         <meta charset="UTF-8">
         <link rel="stylesheet" href="css/style.css" type="text/css">
+        <link href="css/font/css/fontawesome.css" rel="stylesheet">
+        <link href="css/font/css/brands.css" rel="stylesheet">
+        <link href="css/font/css/solid.css" rel="stylesheet">
         <title>Lilleputtsko</title>
+        <script src="https://kit.fontawesome.com/2d6eaf2aa7.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <header>
             <nav>
+                <i class="fa-solid fa-bars"></i>
                 <span id="LOGO">
                     <a href="indexnr2.html">Lilleputtsko</a>
                 </span>
+                <i class="fa-solid fa-magnifying-glass"></i>
+                <i class="fa-solid fa-cart-shopping"></i>
+                <ul>
             </nav>
         </header>
         <main>
+            <nav>
+                <ul>
+                    <li><a href="#">Hjem</a></li>
+                    <li><a href="#">Kjøpsvilkår</a></li>
+                </ul>
+            </nav>
         <section>
             <h2>Kjøpsvilkår</h2>
             <article>
@@ -87,24 +101,21 @@
                     </ul>
                     <h3>Våre produkter</h3>
                     <ul>
-                        <li><a href="produkt.html">Sommersko</a></li>
+                        <li><a href="#">Sommersko</a></li>
                         <li><a href="#">Vintersko</a></li>
                         <li><a href="#">Pensko</a></li>
                         <li><a href="#">Boots</a></li>
                         <li><a href="#">Regnstøvler</a></li>
                         <li><a href="#">Joggesko</a></li>
                     </ul>
-                    
-                    <h4>Sjekk ut våre sosiale medier</h4>
-               <!--legg inn ikoner-->
-                    <ul id="social-icons">
-                        <li>facebook</li>
-                        <li>instagram</li>
-                        <li>snapchat</li>
-                    </ul>
                 </nav>
+                    <h4 id="sosialemedier">Sjekk ut våre sosiale medier</h4>
+                    <ul>
+                        <i class="fa-brands fa-square-facebook ikoner"></i>
+                        <i class="fa-brands fa-instagram ikoner"></i>
+                        <i class="fa-brands fa-snapchat ikoner"></i>
+                    </ul>
             </section>
         </footer>
     </body>
 </html>
-    
