det vil ikke funke

--- a/produkt.html
+++ b/produkt.html
@@ -11,6 +11,7 @@
         <script src="https://kit.fontawesome.com/2d6eaf2aa7.js" crossorigin="anonymous"></script>
     </head>
     <body>
+        <div id="grid-container-produkt">
         <header>
             <nav>
                 <i class="fa-solid fa-bars"></i>
@@ -19,12 +20,11 @@
                 </span>
                 <i class="fa-solid fa-magnifying-glass"></i>
                 <i class="fa-solid fa-cart-shopping"></i>
-                <ul>
             </nav>
         </header>
         <main>
             <nav>
-                <ul>
+                <ul class="brodsti">
                     <li><a href="#">Hjem</a></li>
                     <li><a href="#">Barn</a></li>
                     <li><a href="#">Alle barnesko</a></li>
@@ -36,10 +36,10 @@
                     <img src="img/sko-begge.jpg" alt="inextenso softwear sko, lilla og svarte sko med borrelås og elastisk snøring">
                 </article>
                 <article id="produktimg">
-                    <img src="img/sko-begge.jpg">
-                    <img src="img/sko-foran.jpg">
-                    <img src="img/sko-siden.jpg">
-                    <img src="img/sko-bak.jpg">
+                    <img src="img/sko-begge.jpg" alt="begge skoene vises">
+                    <img src="img/sko-foran.jpg" alt="skoen vises foran">
+                    <img src="img/sko-siden.jpg" alt="skoen vises fra siden">
+                    <img src="img/sko-bak.jpg" alt="skoen vises fra baksiden">
                 </article>
             </section>
             <section>
@@ -94,13 +94,12 @@
                         <li><a href="#">Joggesko</a></li>
                     </ul>
                 </nav>
-                    <h4 id="sosialemedier">Sjekk ut våre sosiale medier</h4>
-                    <ul>
+                    <h4 id="sosialemedier">Sjekk ut våre sosiale medier</h4>                 
                         <i class="fa-brands fa-square-facebook ikoner"></i>
                         <i class="fa-brands fa-instagram ikoner"></i>
                         <i class="fa-brands fa-snapchat ikoner"></i>
-                    </ul>
             </section>
         </footer>
+        </div>
     </body>
 </html>
