--- a/indexnr2.html
+++ b/indexnr2.html
@@ -11,92 +11,84 @@
         <script src="https://kit.fontawesome.com/2d6eaf2aa7.js" crossorigin="anonymous"></script>
     </head>
     <body>
-        <div id="grid-container"></div>
-        <header>
-            <nav>
-                <i class="fa-solid fa-bars"></i>
-                <span id="LOGO">
-                    <a href="indexnr2.html">Lilleputtsko</a>
-                </span>
-                <div>
-                    <i class="fa-solid fa-magnifying-glass"></i>
-                    <i class="fa-solid fa-cart-shopping"></i>
-                </div>
-                <ul class="navbar">
-                    <li><a href="produkt.html">Sommersko</a></li>
-                    <li><a href="produkt.html">Vintersko</a></li>
-                    <li><a href="produkt.html">Pensko</a></li>
-                    <li><a href="produkt.html">Boots</a></li>
-                    <li><a href="produkt.html">Regnstøvler</a></li>
-                    <li><a href="produkt.html">Joggesko</a></li>
-                </ul>
-            </nav>
-        </header>
-        <main>
-            <section>
-                <a href="produkt.html" class="knapp">Jente</a>
-                <a href="produkt.html" class="knapp">Gutt</a>
-            </section>
-            <h2>Tilbud</h2>
-                 <article class="img">
-                    <img src="img/tilbud-bilde-sko.jpg" alt="tilbud sko, moderne, fargerike barnesko">
-                 </article>
-            <section>
-                <a href="produkt.html" class="knapp">Gummistøvler</a>
-                <a href="produkt.html" class="knapp">Vintersko</a>
-                <a href="produkt.html" class="knapp">Sommersko</a>
-                <a href="produkt.html" class="knapp">Joggesko</a>
-            </section>
-            <section>
-                <article class="img">
-                    <img src="img/nyheter-bilde-sko.jpg" alt="nyheter sko, disse nye skoene tilbyr vi i vår nettbutikk. moderne, faregerike barnesko">
-                    <p>Nyheter</p>
-                </article>
-            </section>
-            <article id="medlemsknapp">
-                <h2>Bli medlem her</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Ut risus neque, aliquet ut accumsan vel, facilisis eu ex.
-                        Nunc erat turpis, molestie id tincidunt nec, placerat id 
-                        ante. Mauris viverra vestibulum augue, in egestas eros 
-                        rhoncus nec. Cras eu purus interdum, vehicula dui ac, sodales 
-                        arcu. Donec efficitur vulputate dui eget imperdiet. Nullam
-                        finibus maximus ultricies
-                     </p>
-            </article>
-         
-            <!--legg inn ting som article, section osv -->
-        </main>
-        <footer>
-            <!--legg inn den svarte boksen på bånn-->
-            <section id="Kundeservice">
+        <div id="grid-container-index">
+            <header>
                 <nav>
-                    <h2>LILLEPUTTSKO</h2>
-                    <h3>Kundeservice</h3>
-                    <ul>
-                        <li><a href="#">KUNDEKLUBB</a></li>
-                        <li><a href="#">KUNDESERVICE</a></li>
-                        <li><a href="kjøpsvilkår.html">KJØPSVILKÅR</a></li>
-                        <li><a href="#">KONTAKT OSS</a></li>
-                    </ul>
-                    <h3>Våre produkter</h3>
-                    <ul>
-                        <li><a href="#">Sommersko</a></li>
-                        <li><a href="#">Vintersko</a></li>
-                        <li><a href="#">Pensko</a></li>
-                        <li><a href="#">Boots</a></li>
-                        <li><a href="#">Regnstøvler</a></li>
-                        <li><a href="#">Joggesko</a></li>
+                    <i class="fa-solid fa-bars" id="ham"></i>
+                    <span id="LOGO">
+                        <a href="indexnr2.html">Lilleputtsko</a>
+                    </span>
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                        <i class="fa-solid fa-cart-shopping"></i>
+                    <ul class="navbar">
+                        <li><a href="produkt.html">Sommersko</a></li>
+                        <li><a href="produkt.html">Vintersko</a></li>
+                        <li><a href="produkt.html">Pensko</a></li>
+                        <li><a href="produkt.html">Boots</a></li>
+                        <li><a href="produkt.html">Regnstøvler</a></li>
+                        <li><a href="produkt.html">Joggesko</a></li>
                     </ul>
                 </nav>
-                    <h4 id="sosialemedier">Sjekk ut våre sosiale medier</h4>
-                    <ul>
-                        <i class="fa-brands fa-square-facebook ikoner"></i>
-                        <i class="fa-brands fa-instagram ikoner"></i>
-                        <i class="fa-brands fa-snapchat ikoner"></i>
-                    </ul>
-            </section>
-        </footer>
+            </header>
+            <main>
+                <section>
+                    <a href="produkt.html" class="knapp">Jente</a>
+                    <a href="produkt.html" class="knapp">Gutt</a>
+                </section>
+                    <article class="img">
+                        <img src="img/tilbud-bilde-sko.jpg" alt="tilbud sko, moderne, fargerike barnesko">
+                    </article>
+                <section>
+                    <a href="produkt.html" class="skotype">Gummistøvler</a>
+                    <a href="produkt.html" class="skotype">Vintersko</a>
+                    <a href="produkt.html" class="skotype">Sommersko</a>
+                    <a href="produkt.html" class="skotype">Joggesko</a>
+                </section>
+                <section>
+                    <article class="img">
+                        <img src="img/nyheter-bilde-sko.jpg" alt="nyheter sko, disse nye skoene tilbyr vi i vår nettbutikk. moderne, faregerike barnesko">
+                    </article>
+                </section>
+                <article id="medlemsknapp">
+                    <h2>Bli medlem her</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Ut risus neque, aliquet ut accumsan vel, facilisis eu ex.
+                            Nunc erat turpis, molestie id tincidunt nec, placerat id 
+                            ante. Mauris viverra vestibulum augue, in egestas eros 
+                            rhoncus nec. Cras eu purus interdum, vehicula dui ac, sodales 
+                            arcu. Donec efficitur vulputate dui eget imperdiet. Nullam
+                            finibus maximus ultricies
+                        </p>
+                </article>
+            </main>
+            <footer>
+                <section id="Kundeservice">
+                    <nav>
+                        <h2>LILLEPUTTSKO</h2>
+                        <h3>Kundeservice</h3>
+                        <ul class="footer">
+                            <li><a href="#">KUNDEKLUBB</a></li>
+                            <li><a href="#">KUNDESERVICE</a></li>
+                            <li><a href="kjøpsvilkår.html">KJØPSVILKÅR</a></li>
+                            <li><a href="#">KONTAKT OSS</a></li>
+                        </ul>
+                        <h3>Våre produkter</h3>
+                        <ul class="footer">
+                            <li><a href="#">Sommersko</a></li>
+                            <li><a href="#">Vintersko</a></li>
+                            <li><a href="#">Pensko</a></li>
+                            <li><a href="#">Boots</a></li>
+                            <li><a href="#">Regnstøvler</a></li>
+                            <li><a href="#">Joggesko</a></li>
+                        </ul>
+                    </nav>
+                        <h4 id="sosialemedier">Sjekk ut våre sosiale medier</h4>
+                            <i class="fa-brands fa-square-facebook ikoner"></i>
+                            <i class="fa-brands fa-instagram ikoner"></i>
+                            <i class="fa-brands fa-snapchat ikoner"></i>
+                </section>
+            </footer>
+        </div>
     </body>
 </html>
