--- a/indexnr2.html
+++ b/indexnr2.html
@@ -62,9 +62,8 @@
                         </p>
                 </article>
             </main>
-            <footer>
-                <section id="Kundeservice">
-                    <nav>
+            <footer id="footer-footer">
+                    <article id="kontaktoss">
                         <h2>LILLEPUTTSKO</h2>
                         <h3>Kundeservice</h3>
                         <ul class="footer">
@@ -73,6 +72,8 @@
                             <li><a href="kjøpsvilkår.html">KJØPSVILKÅR</a></li>
                             <li><a href="#">KONTAKT OSS</a></li>
                         </ul>
+                    </article>
+                    <article id="vare-produkter">
                         <h3>Våre produkter</h3>
                         <ul class="footer">
                             <li><a href="#">Sommersko</a></li>
@@ -82,12 +83,13 @@
                             <li><a href="#">Regnstøvler</a></li>
                             <li><a href="#">Joggesko</a></li>
                         </ul>
-                    </nav>
+                    </article>
+                    <article id="sosiale-medier">
                         <h4 id="sosialemedier">Sjekk ut våre sosiale medier</h4>
                             <i class="fa-brands fa-square-facebook ikoner"></i>
                             <i class="fa-brands fa-instagram ikoner"></i>
                             <i class="fa-brands fa-snapchat ikoner"></i>
-                </section>
+                    </article>
             </footer>
         </div>
     </body>
