--- a/produkt.html
+++ b/produkt.html
@@ -14,7 +14,7 @@
         <div id="grid-container-produkt">
         <header>
             <nav>
-                <i class="fa-solid fa-bars"></i>
+                <i class="fa-solid fa-bars" id="ham"></i>
                 <span id="LOGO">
                     <a href="indexnr2.html">Lilleputtsko</a>
                 </span>
