--- a/indexnr2.html
+++ b/indexnr2.html
@@ -16,10 +16,11 @@
                 <nav>
                     <i class="fa-solid fa-bars" id="ham"></i>
                     <span id="LOGO">
-                        <a href="indexnr2.html">Lilleputtsko</a>
+                        <a href="indexnr2.html" id="LOGO">Lilleputtsko</a>
                     </span>
-                        <i class="fa-solid fa-magnifying-glass"></i>
-                        <i class="fa-solid fa-cart-shopping"></i>
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <i class="fa-solid fa-cart-shopping nav-ikon"></i>
+                </nav>
                     <ul class="navbar">
                         <li><a href="produkt.html">Sommersko</a></li>
                         <li><a href="produkt.html">Vintersko</a></li>
@@ -62,7 +63,8 @@
                         </p>
                 </article>
             </main>
-            <footer id="footer-footer">
+            </div>
+            <footer id="footer">
                     <article id="kontaktoss">
                         <h2>LILLEPUTTSKO</h2>
                         <h3>Kundeservice</h3>
@@ -91,6 +93,5 @@
                             <i class="fa-brands fa-snapchat ikoner"></i>
                     </article>
             </footer>
-        </div>
     </body>
 </html>
