--- a/kjøpsvilkår.html
+++ b/kjøpsvilkår.html
@@ -16,7 +16,7 @@
             <nav>
                 <i class="fa-solid fa-bars" id="ham"></i>
                 <span id="LOGO">
-                    <a href="indexnr2.html">Lilleputtsko</a>
+                    <a href="indexnr2.html" id="LOGO">Lilleputtsko</a>
                 </span>
                 <i class="fa-solid fa-magnifying-glass"></i>
                 <i class="fa-solid fa-cart-shopping"></i>
@@ -24,8 +24,8 @@
         </header>
         <main>
             <nav>
-                <ul>
-                    <li><a href="#">Hjem</a></li>
+                <ul class="brodsti">
+                    <li><a href="#">Hjem/</a></li>
                     <li><a href="#">Kjøpsvilkår</a></li>
                 </ul>
             </nav>
@@ -86,35 +86,36 @@
                 </p>
             </article>
         </section>
+        </div>
         </main>
-        <footer>
-            <!--legg inn den svarte boksen på bånn-->
-            <section>
-                <nav>
-                    <h2>LILLEPUTTSKO</h2>
-                    <h3>Kundeservice</h3>
-                    <ul>
-                        <li><a href="#">KUNDEKLUBB</a></li>
-                        <li><a href="#">KUNDESERVICE</a></li>
-                        <li><a href="kjøpsvilkår.html">KJØPSVILKÅR</a></li>
-                        <li><a href="#">KONTAKT OSS</a></li>
-                    </ul>
-                    <h3>Våre produkter</h3>
-                    <ul>
-                        <li><a href="#">Sommersko</a></li>
-                        <li><a href="#">Vintersko</a></li>
-                        <li><a href="#">Pensko</a></li>
-                        <li><a href="#">Boots</a></li>
-                        <li><a href="#">Regnstøvler</a></li>
-                        <li><a href="#">Joggesko</a></li>
-                    </ul>
-                </nav>
-                    <h4 id="sosialemedier">Sjekk ut våre sosiale medier</h4>                   
-                        <i class="fa-brands fa-square-facebook ikoner"></i>
-                        <i class="fa-brands fa-instagram ikoner"></i>
-                        <i class="fa-brands fa-snapchat ikoner"></i>
-            </section>
+        <footer id="footer">
+            <article id="kontaktoss">
+                <h2>LILLEPUTTSKO</h2>
+                <h3>Kundeservice</h3>
+                <ul class="footer">
+                    <li><a href="#">KUNDEKLUBB</a></li>
+                    <li><a href="#">KUNDESERVICE</a></li>
+                    <li><a href="kjøpsvilkår.html">KJØPSVILKÅR</a></li>
+                    <li><a href="#">KONTAKT OSS</a></li>
+                </ul>
+            </article>
+            <article id="vare-produkter">
+                <h3>Våre produkter</h3>
+                <ul class="footer">
+                    <li><a href="#">Sommersko</a></li>
+                    <li><a href="#">Vintersko</a></li>
+                    <li><a href="#">Pensko</a></li>
+                    <li><a href="#">Boots</a></li>
+                    <li><a href="#">Regnstøvler</a></li>
+                    <li><a href="#">Joggesko</a></li>
+                </ul>
+            </article>
+            <article id="sosiale-medier">
+                <h4 id="sosialemedier">Sjekk ut våre sosiale medier</h4>
+                    <i class="fa-brands fa-square-facebook ikoner"></i>
+                    <i class="fa-brands fa-instagram ikoner"></i>
+                    <i class="fa-brands fa-snapchat ikoner"></i>
+            </article>
         </footer>
-    </div>
     </body>
 </html>
