--- a/indexnr2.html
+++ b/indexnr2.html
@@ -18,7 +18,7 @@
                     <span id="LOGO">
                         <a href="indexnr2.html" id="LOGO">Lilleputtsko</a>
                     </span>
-                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <i class="fa-solid fa-magnifying-glass nav-ikon"></i>
                     <i class="fa-solid fa-cart-shopping nav-ikon"></i>
                 </nav>
                     <ul class="navbar">
@@ -93,5 +93,5 @@
                             <i class="fa-brands fa-snapchat ikoner"></i>
                     </article>
             </footer>
-    </body>
+        </body>
 </html>
