--- a/indexnr2.html
+++ b/indexnr2.html
@@ -18,8 +18,10 @@
                     <span id="LOGO">
                         <a href="indexnr2.html" id="LOGO">Lilleputtsko</a>
                     </span>
-                    <i class="fa-solid fa-magnifying-glass nav-ikon"></i>
-                    <i class="fa-solid fa-cart-shopping nav-ikon"></i>
+                    <section class="flex-container-logo" >
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                        <i class="fa-solid fa-cart-shopping"></i>
+                    </section>
                 </nav>
                     <ul class="navbar">
                         <li><a href="produkt.html">Sommersko</a></li>
