--- a/produkt.html
+++ b/produkt.html
@@ -44,27 +44,28 @@
             </section>
             <section>
                 <h3>Inextenso</h3>
-                <p>softwearsko</p>
-                <p>299</p>
-                <p>farger</p>
-                <p id="blå-sko">Blå</p>
-                <p id="rød-sko">Rød</p>
-                <p id="grønn-sko">Grønn</p>
+                <p id="skonavn">softwearsko</p>
+                <p id="pris">299</p>
+                <p id="skofarge">farger</p>
+                <p id="blue-sko" class="skofarge">Blå</p>
+                <p id="red-sko" class="skofarge">Rød</p>
+                <p id="gren-sko" class="skofarge">Grønn</p>
                 <p>Størrelser</p>
-                <p class="størrelser">28</p>
-                <p class="størrelser">29</p>
-                <p class="størrelser">30</p>
-                <p class="størrelser">31</p>
-                <p class="størrelser">32</p>
-                <p class="størrelser">33</p>
-                <p class="størrelser">34</p>
-                <p class="størrelser">35</p>
-                <p class="størrelser">36</p>
-                <p class="størrelser">37</p>
-
-                <a href="#" id="kjøpeknapp">Legg til i handlekurv</a>
-                <h6>Produktbeskrivelse</h6>
-                <p>
+                <div id="sizes">
+                    <p class="størrelser">28</p>
+                    <p class="størrelser">29</p>
+                    <p class="størrelser">30</p>
+                    <p class="størrelser">31</p>
+                    <p class="størrelser">32</p>
+                    <p class="størrelser">33</p>
+                    <p class="størrelser">34</p>
+                    <p class="størrelser">35</p>
+                    <p class="størrelser">36</p>
+                    <p class="størrelser">37</p>
+                </div>
+                <a href="#" id="kjopeknapp">Legg til i handlekurv</a>
+                <h6 id="produktbeskrivelse">Produktbeskrivelse</h6>
+                <p id="produkt">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed neque 
                     finibus, molestie lacus et, volutpat justo. Phasellus consequat volutpat aliquet. 
                     Vivamus quis porta sem. Morbi vitae metus eros. Etiam lectus dui, ullamcorper eu 
